# oj

./: CMakeCache.txt  CMakeLists.txt  Makefile  aPlusB.c  cmake_install.cmake  play  play.c  tet
0-intro/: CMakeLists.txt  Makefile  cmake_install.cmake  guessNumber.c  hello.c
1-types-io/: CMakeLists.txt  Makefile  admin.c  circle.c  cmake_install.cmake  mol.c  sphere.c
11-list/: Makefile.bak  buddy  buddy.c  demo  demo.c  fifa  fifa.c  file  file-mam.c  file.c  hash  hash.c  hashh  hashh.c  polynlist  polynlist.c  t  t.c  test  test.c  test1
12-ll/: CMakeLists.txt  josephus.c  josephus.h
2-if-for-array/: 1  4  CMakeLists.txt  Makefile  a  cmake_install.cmake  collatz.c  diff.c  factorial.c  inverse2.c  ob  ob-evo.c  obstacle.c  obstacleAI.c  series.c  single.c  singleV2.c  test-obst.c  tmp
3-while/: binary  binary.c  decimal.c  flip.c  jose1.c  jose3  jose3.c  joseIter  joseRecur  josephus.c  palindrome.c  play  play.c  quicksort.c  selection  selection.c  singleV2  singleV2.c  singleV2bit  singleV2bit.c  singleV3  singleV3.c  statistics.c  while.c
4-loop/: bubbleSort  bubbleSort.c  life  life.c  lifeSA.c  matrix  matrix.c  merge  merge.c  mineSA.c  mines  mines.c  sudoku  sudoku.c  sudokuSA.c  trace  trace.c
5-function/: absolute-prime.c  absprime  behaviors  behaviors.c  magic-square  magic-square.c  next-permutation  next-permutation.c  radix  radix.c  sum  sum.c
6-recur/: fib  fib.c  gcd  gcd.c  min  min.c  sum  sum.c
7-datatypes/: CMakeLists.txt  MergeSortAdvance.c  brackets  brackets.c  buddy  buddy.c  cube.c  cuboard  cuboard.c  cuboid  cuboid.c  (+12 more)
(+111 files in other folders)
